<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment" >

    <EditText
        android:id="@+id/registerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/name_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/registerName"
        app:layout_constraintStart_toStartOf="@+id/registerName"
        app:layout_constraintTop_toBottomOf="@+id/registerName" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="none|textPassword"
        app:layout_constraintEnd_toEndOf="@+id/registerEmail"
        app:layout_constraintStart_toStartOf="@+id/registerEmail"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

    <Button
        android:id="@+id/registerSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit_label"
        app:layout_constraintEnd_toEndOf="@+id/registerPassword"
        app:layout_constraintStart_toStartOf="@+id/registerPassword"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <TextView
        android:id="@+id/registerCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel_label"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/registerSubmit"
        app:layout_constraintTop_toBottomOf="@+id/registerSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>